--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,24 @@
 
     <!-- Permission to draw over other apps -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    
+
     <!-- Permission for socket communication -->
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
+    <!-- Foreground service permission for Android 9+ (API 28+) -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <!-- Foreground service type permissions for Android 14+ (API 34+) -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+
+    <!-- Post notifications permission for Android 13+ (API 33+) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <!-- Define a custom permission for secure broadcast communication -->
     <permission
         android:name="com.droidrun.portal.SEND_INPUT_DATA"
         android:protectionLevel="signature" />
-    
+
     <!-- Use our custom permission -->
     <uses-permission android:name="com.droidrun.portal.SEND_INPUT_DATA" />
 
@@ -40,6 +49,7 @@
             android:name=".DroidrunAccessibilityService"
             android:enabled="true"
             android:exported="false"
+            android:foregroundServiceType="specialUse"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -47,6 +57,9 @@
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="Accessibility service for UI automation and screen reading" />
         </service>
 
         <provider
