--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,7 @@
     <!-- Permission for socket communication -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- Foreground service permission for Android 9+ (API 28+) -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <!-- Foreground service type permissions for Android 14+ (API 34+) -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
-
-    <!-- Post notifications permission for Android 13+ (API 33+) -->
+    <!-- Post notifications permission for Android 13+ (API 33+) - Optional for user notifications -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <!-- Define a custom permission for secure broadcast communication -->
@@ -49,7 +43,6 @@
             android:name=".DroidrunAccessibilityService"
             android:enabled="true"
             android:exported="false"
-            android:foregroundServiceType="specialUse"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -57,9 +50,6 @@
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
-            <property
-                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="Accessibility service for UI automation and screen reading" />
         </service>
 
         <provider
